fix: error 404 img reduced width to hide the layout breaking

--- a/src/styles/partials/content.sass
+++ b/src/styles/partials/content.sass
@@ -32,3 +32,6 @@
         display: grid
         justify-content: center
         align-content: space-around
+
+        img 
+            max-width: 300px
